--- a/app/src/main/res/layout/activity_name_changer.xml
+++ b/app/src/main/res/layout/activity_name_changer.xml
@@ -13,7 +13,7 @@
         android:id="@+id/editText" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/acceptBtn"
         android:text="@string/accept_name"
@@ -21,7 +21,7 @@
         android:layout_gravity="center_horizontal" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/backToMain"
         android:text="Back to main activity with clear top flag"
