--- a/app/src/main/res/layout/activity_two.xml
+++ b/app/src/main/res/layout/activity_two.xml
@@ -13,28 +13,28 @@
         android:textColor="@android:color/black"></TextView>
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/noFlagsBtn"
         android:textSize="14sp"
         android:text="Start main activity with no flags" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/singleTopBtn"
         android:textSize="14sp"
         android:text="Start main activity with reorder to front flag" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/noHistoryBtn"
         android:textSize="14sp"
         android:text="Start main activity with no history flag" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/nameChangerBtn"
         android:textSize="14sp"
